# ai-spreadsheet

./: README.md  docker-compose.yaml
python-backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
python-backend/src/python_backend/: __init__.py  ai_functions.py  brave.py  database.py  llm.py  main.py  models.py  prompts.py
react-frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
react-frontend/src/: index.css
react-frontend/src/components/: CreateSpreadsheetModal.tsx  SpreadsheetTable.tsx  SpreadsheetTabs.tsx
react-frontend/src/components/spreadsheet/: AutofillButton.tsx  SpreadsheetCell.tsx  SpreadsheetHeader.tsx  SpreadsheetToolbar.tsx
react-frontend/src/pages/: Index.tsx
react-frontend/src/services/: api.ts
react-frontend/src/store/: useSpreadsheetStore.ts
react-frontend/src/types/: spreadsheet.ts
