[project]
name = "python-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ricky.ediga@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.47.1",
    "curl-cffi>=0.9.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.8",
    "groq>=0.18.0",
    "instructor>=1.7.2",
    "openai>=1.64.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
main = "src.python_backend.main:main"
